Revision history for Music-ToRoman

{{$NEXT}}
    - Improve documentation!

0.1200 2019-09-05 00:45:23
    - A chord named with a "-" means "minor."
    - A chord named "maj" is not minor.
    - Improve verbose output.
    - Add test cases.
    - Improve documentation.

0.1106 2019-09-03 10:52:11
    - Improve documentation.

0.1105 2019-09-03 09:05:12
    - Improve documentation ever so slightly.

0.1104 2019-09-02 22:06:41
    - Clean-up code.
    - Improve documentation.

0.1103 2019-09-02 21:43:06
    - Improve documentation.
    - Add test cases.

0.1102 2019-09-02 20:21:58
    - Clean-up code.

0.1101 2019-09-02 19:17:50
    - Improve documentation.

0.1100 2019-09-02 19:04:20
    - Improve documentation.
    - Add a major_tonic attribute.
    - Add a verbose attribute.
    - Add test cases for every key and scale mode.
    - Handle double accidental notes.
    - Handle the weird cases where computed #X chords should be bY chords.

0.1002 2019-09-01 09:04:22
    - Improve documentation.
    - Add a couple test cases.

0.1001 2019-09-01 08:03:43
    - Improve documentation.

0.1000 2019-09-01 07:42:49
    - Improve documentation slightly.
    - Add isa attribute constraints and a no-chord parse error.

0.0902 2019-09-01 06:46:30
    - Improve documentation.
    - Clean-up code slightly.

0.0901 2019-02-21 11:57:48
    - Don't insert a space before a maj/min decorator.

0.0900 2019-02-20 20:56:20
    - Allow parsing of non-scale notes in the bass (ex: "iii9/bii").

0.0802 2019-02-20 20:28:18
    - Improve documentation.
    - Add to and reorganize tests.

0.0801 2019-02-19 23:19:37
    - Improve documentation.

0.0800 2019-02-19 21:23:30
    - Clean up code and tests.
    - Allow diminished chords with "dim" in the name.
    - Allow chord inputs like "AMaj7" and "Bmin7."

0.0701 2018-11-18 15:52:45
    - Restrict the note regex to [A-G] (instead of \w).
    - Improve documentation.

0.0700 2018-11-07 14:28:18