@@ -2,6 +2,7 @@ Revision history for Music-ToRoman
 
 {{$NEXT}}
     - Improve documentation!
+    - Support △ (maj) and ø (diminished) in chord names.
 
 0.1200 2019-09-05 00:45:23
     - A chord named with a "-" means "minor."
